@@ -2,16 +2,16 @@
 
 =head1 NAME
 
-inherit - Like parent, but with version checks
+superclass - Like parent, but with version checks
 
 =head1 VERSION
 
-version 0.001
+version 0.002
 
 =head1 SYNOPSIS
 
     package Baz;
-    use inherit qw(Foo Bar), 'Baz' => 1.23;
+    use superclass qw(Foo Bar), 'Baz' => 1.23;
 
 =head1 DESCRIPTION
 
@@ -35,11 +35,11 @@ The synopsis example is mostly similar in effect to
 Dotted-decimal versions should be given as a string, not a raw v-string, and
 must include at least one decimal point.
 
-    use inherit 'Bar' => v65.65.65; # BAD: loads AAA.pm
+    use superclass 'Bar' => v65.65.65; # BAD: loads AAA.pm
 
-    use inherit 'Bar' => 'v6';      # BAD: loads v6.pm
+    use superclass 'Bar' => 'v6';      # BAD: loads v6.pm
 
-    use inherit 'Foo' => 'v0.10.0'; # OK
+    use superclass 'Foo' => 'v0.10.0'; # OK
 
 If the first import argument is C<-norequire>, no files will be loaded
 (but any versions given will still be checked).
@@ -49,7 +49,7 @@ or a differently named file:
 
   package MyHash;
   use Tie::Hash;
-  use inherit -norequire, 'Tie::StdHash';
+  use superclass -norequire, 'Tie::StdHash';
 
 =for Pod::Coverage method_names_here
 
@@ -64,7 +64,7 @@ or a differently named file:
 Attempting to inherit from yourself generates a warning.
 
     package Foo;
-    use inherit 'Foo';
+    use superclass 'Foo';
 
 =back
 
@@ -84,7 +84,7 @@ Bart Lateur, Max Maischein, Anno Siegel, and Michael Schwern
 =head2 Bugs / Feature Requests
 
 Please report any bugs or feature requests through the issue tracker
-at L<https://github.com/dagolden/inherit/issues>.
+at L<https://github.com/dagolden/superclass/issues>.
 You will be notified automatically of any progress on your issue.
 
 =head2 Source Code
@@ -92,9 +92,9 @@ You will be notified automatically of any progress on your issue.
 This is open source software.  The code repository is available for
 public review and contribution under the terms of the license.
 
-L<https://github.com/dagolden/inherit>
+L<https://github.com/dagolden/superclass>
 
-  git clone git://github.com/dagolden/inherit.git
+  git clone git://github.com/dagolden/superclass.git
 
 =head1 AUTHOR
 
