@@ -1,4 +1,4 @@
-name    = inherit
+name    = superclass
 author  = David Golden <dagolden@cpan.org>
 license = Perl_5
 copyright_holder = David Golden
