@@ -1,8 +1,10 @@
-Revision history for inherit
+Revision history for superclass
 
 {{$NEXT}}
 
+    - Renamed from 'inherit' to 'superclass'
+
 0.001     2013-02-08 22:31:22 America/New_York
 
-  - First release
+    - First release
 
